# remcap

./: README.md  TODO.md
.cursor/rules/: remcap.mdc
bench/: .gitignore  README.md  pyproject.toml
bench/bench/: __init__.py  config.py  data_generators.py  metrics.py  runner.py
bench/bench/backends/: __init__.py  base.py
bench/bench/backends/foxglove/: __init__.py
bench/bench/backends/rerun/: __init__.py  client_py.py  server.py
bench/configs/: high_freq.json  high_res.json  typical.json
